examples/errors/name_resolution/E0202_undefined_struct.hd
fn main(): void {
    let p: Point = Point { x: 10, y: 20 };
    return;
}
